k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: food-order
  labels:
    app: food-order-system
    environment: production
